# deploy-schlemmer-maul-com

./: .copier-answers.yml  .editorconfig  .envrc  .github_changelog_generator  .hadolint.yaml  .pre-commit-config.yaml  Pulumi.prod.yaml  Pulumi.yaml  README.md  __main__.py  coverage.coverage  pyproject.toml  renovate.json
.github/workflows/: format.yaml  release.yml  test.yaml
migration/: .env.example  README.md  import_woo.py  pyproject.toml  scrape.py
scripts/: oklab_palette.py  run-all-checks.sh
src/deploy_schlemmer_maul_com/: __main__.py  cli.py  model.py  py.typed
tests/: conftest.py
tests/deploy_schlemmer_maul_com/: cli_test.py  deploy_schlemmer_maul_com_test.py
